--- a/CheckAuthoringApp.ipynb
+++ b/CheckAuthoringApp.ipynb
@@ -57,8 +57,10 @@
     "    authoring_app = web_map_data.get(\"authoringApp\")\n",
     "    if authoring_app in switch:\n",
     "        print(f\"Web map {web_map.id} authored by {switch[authoring_app]}.\")\n",
-    "    else authoring_app == None:\n",
+    "    elif authoring_app == None:\n",
     "        print(f\"'authoringApp' property not in web map {web_map.id} item's JSON.\")"
+    "    else:\n",
+    "        raise Exception(f\"'authoringApp' property for web map {web_map.id} not in 'switch' dictionary: {authoring_app}.\")"
    ]
   },
   {
