--- a/CheckAuthoringApp.ipynb
+++ b/CheckAuthoringApp.ipynb
@@ -58,7 +58,7 @@
     "    if authoring_app in switch:\n",
     "        print(f\"Web map {web_map.id} authored by {switch[authoring_app]}.\")\n",
     "    elif authoring_app == None:\n",
-    "        print(f\"'authoringApp' property not in web map {web_map.id} item's JSON.\")",
+    "        print(f\"'authoringApp' property not in web map {web_map.id} item's JSON.\")\n",
     "    else:\n",
     "        raise Exception(f\"'authoringApp' property for web map {web_map.id} not in 'switch' dictionary: {authoring_app}.\")"
    ]
